kubernetes-manifest/Frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: three-tier
spec:
  replicas: 2
  selector:
    matchLabels:
      role: frontend
  template:
    metadata:
      labels:
        role: frontend
    spec:
      containers:
        - name: frontend
          image: 543650198843.dkr.ecr.ca-central-1.amazonaws.com/frontend:v3
      imagePullSecrets:
        - name: ecr-secret
          ports:
            - containerPort: 80
