kubernetes-manifest/Frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: three-tier
spec:
  selector:
    role: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
